<resources>
    <string name="app_name">Prisma</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--header-->
    <string name="cancel">cancel</string>
    <string name="next">next</string>
    <string name="recently_add">recently add</string>
    <!--bottom nav-->
    <string name="library">Library</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>

    <string name="notify">Choose an art-style you like</string>
    <string name="share">share</string>
    <string name="save">SAVE</string>

    <string name="had_saved">Saved to album</string>
    <string name="ok">OK</string>

    <string name="hello_blank_fragment">video coming soon…</string>
    <string name="send_email">suggest a style</string>
    <string name="open_web">open the website</string>
</resources>
