<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_cancel"
            android:text="@string/cancel"
            android:gravity="left|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderButtonStyle"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bt_recently_add"
                android:text="@string/recently_add"
                android:textStyle="bold"
                android:gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/HeaderButtonStyle"
                android:paddingRight="0dp"/>
            <ImageView
                android:id="@+id/img_recently_add"
                android:src="@drawable/ic_expand_more_black_24dp"
                android:layout_gravity="left|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_next"
            android:text="@string/next"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderButtonStyle"/>

    </LinearLayout>

    <!--<View-->
        <!--android:layout_gravity="bottom"-->
        <!--android:background="@android:color/black"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp" />-->
</FrameLayout>
